refactor(crypto): refactor encrypted field handling
- rename MasterKey struct to MK for brevity and consistency with DEK
- implement EncryptedValue struct to easily encapsulate sensitive values with automatic encryption/decryption & serialization/deserialization

BREAKING CHANGE: tables user, auth_with and password must be recreated

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "knox"
+name = "pandorica"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.67"
 
 [[bin]]
-name = "knox"
+name = "pandorica"
 path = "src/main.rs"
 
 [dependencies]
