--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         name: Checkout
+      - uses: arduino/setup-protoc@v1
+        name: Install protoc
       - uses: actions-rs/toolchain@v1
         name: Install Rust toolchain
         with:
