--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -16,6 +16,8 @@ jobs:
         name: Checkout
       - uses: arduino/setup-protoc@v1
         name: Install protoc
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions-rs/toolchain@v1
         name: Install Rust toolchain
         with:
