--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,54 +1,9 @@
-[package]
-name = "pandorica"
-version = "0.1.0"
-edition = "2021"
-rust-version = "1.67"
-
-[[bin]]
-name = "pandorica"
-path = "src/main.rs"
-
-[dependencies]
-# Async
-tokio = { version="^1.25.0", features=["rt-multi-thread", "macros"] }
-
-# gRPC
-prost = "^0.11.6"
-tonic = "^0.8.3"
-tonic-reflection = "^0.6.0"
-tonic-web = "^0.5.0"
-
-# Database
-surrealdb = { git="https://github.com/surrealdb/surrealdb" }
-serde = { version="^1.0.152", features=["derive"] }
-serde-binary = "^0.5.0"
-
-# Validation
-validator = "^0.16.0"
-regex = "^1.7.1"
-
-# Logging
-tracing = "^0.1.37"
-tracing-subscriber = { version="^0.3.16", features=["env-filter"] }
-
-# Crypto
-rand_core = { version="^0.6.4", features=["std"] }
-argon2 = "^0.4.1"
-scrypt = { version="^0.10.0", default-features=false }
-chacha20poly1305 = { version="^0.10.1", features=["stream", "std"] }
-gcloud-sdk = { version="^0.19.16", features=["google-cloud-kms-v1"] }
-secret-vault-value = "^0.3.7"
-
-# Filesystem
-object_store = "^0.5.4"
-
-# Misc
-async-trait = "^0.1.64"
-lazy_static = "^1.4.0"
-once_cell = "^1.17.1"
-chrono = "^0.4.23"
-clokwerk = "^0.4.0"
-
-[build-dependencies]
-# gRPC
-tonic-build = { version="^0.8.4", features=["prost"] }
+[workspace]
+members = [
+    "lib/foreign",
+    "lib/identifier",
+    "lib/shared",
+    "lib/singleton",
+    "lib/singleton-derive",
+    "server"
+]
