--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        arch: [x86_64, aarch64]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -30,29 +31,17 @@ jobs:
           default: true
           override: true
 
-      - name: Build (Windows x64)
+      - name: Build (Windows ${{ matrix.arch }})
         if: matrix.os == 'windows-latest'
-        run: cargo build --all --release --target x86_64-pc-windows-msvc && mv target/release/pandorica.exe target/release/pandorica_windows_amd64.exe
+        run: cargo build --all --release --target ${{ matrix.arch }}-pc-windows-msvc && mv target/release/pandorica.exe target/release/pandorica_windows_${{ matrix.arch }}.exe
 
-      - name: Build (Windows ARM64)
-        if: matrix.os == 'windows-latest'
-        run: cargo build --all --release --target aarch64-pc-windows-msvc && mv target/release/pandorica.exe target/release/pandorica_windows_arm64.exe
-
-      - name: Build (Linux x64)
+      - name: Build (Linux ${{ matrix.arch }})
         if: matrix.os == 'ubuntu-latest'
-        run: cargo build --all --release --target x86_64-unknown-linux-gnu && strip target/release/pandorica && mv target/release/pandorica target/release/pandorica_linux_amd64
+        run: cargo build --all --release --target ${{ matrix.arch }}-unknown-linux-gnu && strip target/release/pandorica && mv target/release/pandorica target/release/pandorica_linux_${{ matrix.arch }}
 
-      - name: Build (Linux ARM64)
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo build --all --release --target aarch64-unknown-linux-gnu && strip target/release/pandorica && mv target/release/pandorica target/release/pandorica_linux_arm64
-
-      - name: Build (MacOS x64)
+      - name: Build (MacOS ${{ matrix.arch }})
         if: matrix.os == 'macos-latest'
-        run: cargo build --all --release --target x86_64-apple-darwin && strip target/release/pandorica && mv target/release/pandorica target/release/pandorica_macos_amd64
-
-      - name: Build (MacOS ARM64)
-        if: matrix.os == 'macos-latest'
-        run: cargo build --all --release --target aarch64-apple-darwin && strip target/release/pandorica && mv target/release/pandorica target/release/pandorica_macos_arm64
+        run: cargo build --all --release --target ${{ matrix.arch }}-apple-darwin && strip target/release/pandorica && mv target/release/pandorica target/release/pandorica_macos_${{ matrix.arch }}
 
       - name: Release
         uses: softprops/action-gh-release@v1
