feat(ci): Add audit

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-name: Rust Build
+name: Main Build
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
+    tags:
+      - *
 
 env:
   CRATE_NAME: pandorica
