--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,20 +22,17 @@ validator = "^0.16.0"
 regex = "^1.7.1"
 tracing = "^0.1.37"
 tracing-subscriber = { version="^0.3.16", features=["env-filter"] }
-rand_core = { version="^0.6.4", features=["std"] }
-argon2 = "^0.4.1"
-scrypt = { version="^0.10.0", default-features=false }
-chacha20poly1305 = { version="^0.10.1", features=["stream", "std"] }
-gcloud-sdk = { version="^0.19.16", features=["google-cloud-kms-v1"] }
-secret-vault-value = "^0.3.7"
 object_store = "^0.5.4"
 chrono = "^0.4.23"
 clokwerk = "^0.4.0"
 anyhow = "^1.0.69"
 once_cell = "^1.17.1"
+async-trait = "^0.1.66"
+secret-vault-value = "^0.3.7"
 singleton = { version = "^0.1.0", path = "../lib/singleton" }
 shared = { version = "^0.1.0", path = "../lib/shared" }
 identifier = { version = "^0.1.0", path = "../lib/identifier" }
+crypto = { version = "^0.1.0", path = "../lib/crypto" }
 
 [build-dependencies]
 tonic-build = { version="^0.8.4", features=["prost"] }
