chore(general): migrate protobuf to lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "lib/crypto",
     "lib/foreign",
     "lib/identifier",
+    "lib/protobuf",
     "lib/shared",
     "lib/singleton",
     "lib/singleton-derive",
