--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,2 @@
 [target.aarch64-unknown-linux-gnu]
-pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install --assume-yes protobuf-compiler"]
+pre-build = ["curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v22.2/protoc-22.2-linux-aarch_64.zip", "unzip protoc-22.2-linux-aarch_64.zip -d $HOME/.local", "export PATH=\"$PATH:$HOME/.local/bin\""]
